# RaoPredictiveCoding

./: LICENSE  README.md  main.py  pyproject.toml
predictive_coding/: __init__.py  image_pipeline.py  pe_layer_config.py  pe_params.py  predictive_coding_network.py  predictive_estimator.py
tests/: common.py  test_image_pipeline.py  test_predictive_coding_network.py  test_predictive_estimator.py
