[tool.poetry]
name = "predictive-coding"
version = "0.1.0"
description = ""
authors = ["Oleh Lokshyn <olokshyn@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "predictive_coding"}]

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.24.1"
pydantic = "^1.10.4"
scipy = "^1.10.0"
opencv-python = "^4.7.0.68"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
black = "^23.1.0"
lovely-numpy = "^0.2.8"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
